--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "framer-landing",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.6",
     "next": "15.3.3",
     "postcss": "^8.5.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@types/node": "^20",
