--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.3.3",
     "postcss": "^8.5.5",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "typewriter-effect": "^2.22.0"
   },
